--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <div id="listOffers">
           <ul>
             <li><a href="index.html">00 HOME</a></li>
-            <li><a href="/starter-code/destination-moon.html">01 DESTINATION</a></li>
-            <li><a href="/starter-code/crew-commander.html">02 CREW</a></li>
-            <li><a href="/starter-code/technology-vehicle.html">03 TECHNOLOGY</a></li>
+            <li><a href="./starter-code/destination-moon.html">01 DESTINATION</a></li>
+            <li><a href="./starter-code/crew-commander.html">02 CREW</a></li>
+            <li><a href="./starter-code/technology-vehicle.html">03 TECHNOLOGY</a></li>
           </ul>
         </div>
 
